// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-image should apply fit class for fit="contain" 1`] = `
<modus-wc-image alt="Test" fit="contain" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--contain modus-wc-image--loading modus-wc-image--md modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply fit class for fit="cover" 1`] = `
<modus-wc-image alt="Test" fit="cover" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--cover modus-wc-image--loading modus-wc-image--md modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply fit class for fit="none" 1`] = `
<modus-wc-image alt="Test" fit="none" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--loading modus-wc-image--md modus-wc-image--none modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply fit class for fit="scale-down" 1`] = `
<modus-wc-image alt="Test" fit="scale-down" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--loading modus-wc-image--md modus-wc-image--scale-down modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply shape class for shape="rounded" 1`] = `
<modus-wc-image alt="Test" fit="default" shape="rounded" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--md modus-wc-image--rounded modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply shape class for shape="square" 1`] = `
<modus-wc-image alt="Test" fit="default" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--md modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply size class modus-wc-image--lg 1`] = `
<modus-wc-image alt="Test" fit="default" shape="square" size="lg" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--lg modus-wc-image--loading modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply size class modus-wc-image--md 1`] = `
<modus-wc-image alt="Test" fit="default" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--md modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply size class modus-wc-image--sm 1`] = `
<modus-wc-image alt="Test" fit="default" shape="square" size="sm" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--sm modus-wc-image--square modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should apply size class modus-wc-image--xl 1`] = `
<modus-wc-image alt="Test" fit="default" shape="square" size="xl" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--square modus-wc-image--xl modus-wc-image-container">
    <img alt="Test" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should render with default props 1`] = `
<modus-wc-image alt="Test image" fit="default" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--md modus-wc-image--square modus-wc-image-container">
    <img alt="Test image" class="modus-wc-image-img" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should render with empty alt as a decorative image 1`] = `
<modus-wc-image alt="" fit="default" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--md modus-wc-image--square modus-wc-image-container">
    <img alt="" aria-hidden="true" class="modus-wc-image-img" role="presentation" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should render with no alt as a decorative image 1`] = `
<modus-wc-image fit="default" shape="square" size="md" src="https://example.com/image.jpg">
  <div class="modus-wc-image--default modus-wc-image--loading modus-wc-image--md modus-wc-image--square modus-wc-image-container">
    <img alt="" aria-hidden="true" class="modus-wc-image-img" role="presentation" src="https://example.com/image.jpg">
  </div>
</modus-wc-image>
`;

exports[`modus-wc-image should show fallback when image fails to load 1`] = `
<modus-wc-image alt="Missing image" fit="default" shape="square" size="md" src="https://example.com/bad.jpg">
  <div aria-label="Missing image" class="modus-wc-image--default modus-wc-image--error modus-wc-image--md modus-wc-image--square modus-wc-image-container" role="img">
    <div class="modus-wc-image-fallback">
      <svg aria-hidden="true" class="modus-wc-image-fallback-icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
        <path d="M21 5v6.59l-3-3.01-4 4.01-4-4-4 4-3-3.01V5c0-1.1.9-2 2-2h14c1.1 0 2 .9 2 2zm-3 6.42 3 3.01V19c0 1.1-.9 2-2 2H5c-1.1 0-2-.9-2-2v-6.58l3 2.99 4-4 4 4 4-3.99z"></path>
      </svg>
    </div>
  </div>
</modus-wc-image>
`;
